# xts_acts

./: .gitattributes  .gitignore  1.diff  7445.patch  ;  BUILD.gn  OAT.xml  README.md  README_migrate0528.md  README_migrate0604.md  README_note.md  README_xts1.2.md  README_zh.md  autocommit.py  build.py  build.sh  bundle.json  change_hvigorw_bat.py  check_hvigor.py  ci_build.sh  ci_uncompile_suite.json  er.nameqq  get_dependency.py  init_ark_runtime_jsvm.py  local.properties  patch.diff  test_packages.gni  xts_acts_config.gni
aafwk/aafwk_standard/: BUILD.gn
ability/ability_runtime/: BUILD.gn  context.rar
ai/mindspore/: BUILD.gn  Test.json
arkcompiler/DemoTest/: BUILD.gn  Test.json  build-profile.json5  oh-package.json5
arkui/: BUILD.gn
arkui/ace_c_accessibility_api_16/: BUILD.gn  Test.json  build-profile.json5
arkui/ace_c_arkui_nowear_test_api14/: BUILD.gn  Test.json  build-profile.json5
arkui/ace_c_arkui_nowear_test_api15/: BUILD.gn  Test.json  build-profile.json5
arkui/ace_c_arkui_nowear_test_api18/: BUILD.gn  Test.json  build-profile.json5
arkui/ace_c_arkui_nowear_test_api19/: BUILD.gn  Test.json  build-profile.json5
arkui/ace_c_arkui_nowear_test_api20/: BUILD.gn  Test.json  build-profile.json5
arkui/ace_c_arkui_test/: BUILD.gn  Test.json  build-profile.json5  hvigorw.bat
arkui/ace_c_arkui_test_api13/: BUILD.gn  Test.json  build-profile.json5  hvigorw
arkui/ace_c_arkui_test_api14/: BUILD.gn  Test.json  build-profile.json5
arkui/ace_c_arkui_test_api15/: BUILD.gn  Test.json  build-profile.json5
arkui/ace_c_arkui_test_api151/: BUILD.gn  Test.json  build-profile.json5  oh-package.json5
arkui/ace_c_arkui_test_api15XC/: BUILD.gn  Test.json
arkui/ace_c_arkui_test_api16/: BUILD.gn  Test.json  build-profile.json5
arkui/ace_c_arkui_test_api17/: BUILD.gn  Test.json  build-profile.json5
arkui/ace_c_arkui_test_api18/: BUILD.gn  Test.json  build-profile.json5
arkui/ace_c_arkui_test_api19/: BUILD.gn  Test.json  build-profile.json5  hvigorw.bat
arkui/ace_c_arkui_test_api20/: BUILD.gn  Test.json  oh-package.json5
arkui/ace_c_arkui_testwearcrop/: BUILD.gn  Test.json
arkui/ace_c_scroll_crosslanguage/: BUILD.gn  Test.json  build-profile.json5
arkui/ace_ets_arc_test/: BUILD.gn  Test.json
arkui/ace_ets_arkts_api/: BUILD.gn
arkui/ace_ets_component/: BUILD.gn  Test.json
arkui/ace_ets_component_ArkUI_test/: BUILD.gn  Test.json
arkui/ace_ets_component_advanced/: BUILD.gn
arkui/ace_ets_component_api/: BUILD.gn  Test.json  oh-package.json5
arkui/ace_ets_component_api11_completion/: BUILD.gn  Test.json
arkui/ace_ets_component_api12/: BUILD.gn  Test.json
arkui/ace_ets_component_api_five/: BUILD.gn  Test.json  build-profile.json5
arkui/ace_ets_component_api_four/: BUILD.gn  Test.json
arkui/ace_ets_component_api_three/: BUILD.gn  Test.json  oh-package.json5
arkui/ace_ets_component_api_two/: BUILD.gn  Test.json
arkui/ace_ets_component_apilack/: BUILD.gn  Test.json  build-profile.json5  oh-package.json5
arkui/ace_ets_component_atomicservice/: BUILD.gn
arkui/ace_ets_component_attrlack/: BUILD.gn  Test.json
arkui/ace_ets_component_basic/: BUILD.gn
arkui/ace_ets_component_common_attrs/: BUILD.gn  Test.json
arkui/ace_ets_component_common_attrss/: BUILD.gn
arkui/ace_ets_component_completion/: BUILD.gn
arkui/ace_ets_component_container/: BUILD.gn
arkui/ace_ets_component_dialog/: BUILD.gn
arkui/ace_ets_component_five/: BUILD.gn  Test.json  oh-package.json5
arkui/ace_ets_component_four/: BUILD.gn  Test.json
arkui/ace_ets_component_node/: BUILD.gn
arkui/ace_ets_component_seven/: BUILD.gn
arkui/ace_ets_component_statemangagement/: BUILD.gn
arkui/ace_ets_component_three/: BUILD.gn  Test.json  oh-package.json5
arkui/ace_ets_component_two/: BUILD.gn  Test.json
arkui/ace_ets_component_ui/: BUILD.gn  Test.json  build-profile.json5
arkui/ace_ets_components_ux/: BUILD.gn
arkui/ace_ets_curves/: BUILD.gn  Test.json
arkui/ace_ets_dev/: BUILD.gn  Test.json  oh-package.json5
arkui/ace_ets_layout_test/: BUILD.gn  Test.json
arkui/ace_ets_module_commonAttrsPosition_api12/: BUILD.gn  Test.json
arkui/ace_ets_module_noui/: BUILD.gn
arkui/ace_ets_module_ui/: BUILD.gn
arkui/ace_ets_standard/: BUILD.gn  Test.json
arkui/ace_ets_state_test/: BUILD.gn  Test.json  oh-package.json5
arkui/ace_ets_test/: BUILD.gn  Test.json  oh-package.json5
arkui/ace_ets_third_test/: BUILD.gn  Test.json  oh-package.json5
arkui/ace_ets_ux_five/: BUILD.gn
arkui/ace_ets_ux_one/: BUILD.gn
arkui/ace_ets_webView/: BUILD.gn  Test.json
arkui/ace_ets_web_dev/: BUILD.gn  Test.json
arkui/ace_ets_web_dev_cloudservice_webController/: BUILD.gn  Test.json
arkui/ace_ets_web_dev_cloudservice_webController_enhanced/: BUILD.gn  Test.json
arkui/ace_ets_web_dev_cloudservice_webController_five/: BUILD.gn  Test.json
arkui/ace_ets_web_dev_cloudservice_webController_four/: BUILD.gn  Test.json
arkui/ace_ets_web_dev_cloudservice_webController_group/: BUILD.gn
arkui/ace_ets_web_dev_cloudservice_webController_seven/: BUILD.gn  Test.json
arkui/ace_ets_web_dev_cloudservice_webController_six/: BUILD.gn  Test.json
arkui/ace_ets_web_dev_cloudservice_webController_three/: BUILD.gn  Test.json
arkui/ace_ets_web_dev_cloudservice_webController_two/: BUILD.gn  Test.json
arkui/ace_ets_web_dev_four/: BUILD.gn  Test.json  oh-package.json5
arkui/ace_ets_web_dev_three/: BUILD.gn  Test.json  build-profile.json5  oh-package.json5
arkui/ace_ets_web_dev_two/: BUILD.gn  Test.json
arkui/ace_ets_web_dev_webController/: BUILD.gn  Test.json  build-profile.json5
arkui/ace_ets_web_dev_webviewController/: BUILD.gn  Test.json  build-profile.json5
arkui/ace_ets_web_dev_webviewControllerError/: BUILD.gn  Test.json
arkui/ace_ets_web_enhanced/: BUILD.gn  Test.json
arkui/ace_ets_web_enhanced_stress/: BUILD.gn
build_lite/: BUILD.gn  Test.tmpl
communication/: BUILD.gn
distributeddatamgr/: BUILD.gn
graphic/: BUILD.gn
hdf/: BUILD.gn
multimedia/: BUILD.gn
powermgr/: BUILD.gn
security/: BUILD.gn
sensors/: BUILD.gn
web/: BUILD.gn
web/DFX/: BUILD.gn
(+68793 files in other folders)
