# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos_var.gni")
group("communication") {
  testonly = true
  if (is_standard_system) {
    deps = [
      "bluetooth_ble:ActsBluetoothBleJsTest",
      "bluetooth_bp:ActsBluetoothBpJsTest",
      "bluetooth_br:ActsBluetoothBrJsTest",
      "bluetooth_capi:ActsBluetoothCApiTest",
      "bluetooth_nop:ActsBlutoothNopTest",
      "btmanager_errorcode401:ActsBtManagerErrorCode401JsTest",
      "btmanager_switchoff:ActsBtManagerSwitchOff003JsTest",
      "dsoftbus/capi_ipc:ActsCAPIIPCTest",
      "dsoftbus/ipc_stage/ipc_stageserver:ActsIPCEtsServer",
      "dsoftbus/ipc_stage/ipc_stagetest:ActsIPCEtsTest",
      "dsoftbus/rpc:ActsRpcJsTest",
      "dsoftbus/rpc_request:ActsRpcRequestJsTest",
      "netstack_http_nop:ActsHttpNopStageTest",
      "netstack_socket_nop:ActsSocketNoPermissionTest",
      "nfc_Controller:ActsNFCJSTest",
      "nfc_connectedtag:ActsNFCConnectedTagJSTest",
      "nfc_ErrorCode:ActsNFCErrorJSTest",
      "nfc_SecureElement:ActsnfcSEServiceTest",
      "nfc_SecureElement_2:ActsnfcSEServiceTest2",
      "wifi_ErrorCode201:ActsErrorcode201Test",
      "wifi_ErrorCode401:ActsErrorcode401Test",
      "wifi_capi:ActsWifiCApiTest",
      "wifi_ets_standard:ActsEtsWifiTest",
      "wifi_manager_nop:ActsManagerNopStageOhosTest",
      "wifi_p2p:ActsP2PJSTest",
      "wifi_standard:ActsWifiJSTest",
    ]
  } else {
    deps = [ "wifi_standard:ActsWifiJSTest" ]
  }
}
