# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//test/xts/tools/build/suite.gni")

group("distributeddatamgr") {
  testonly = true
  if (is_standard_system) {
    deps = [
      "dataObjectjstest/hap:dataObject_js_test",
      "dataSharejstest/hap:dataShare_js_test",
      "distributedKVStoretest:distributedKVStoretest",
      "kvStoretest:kvStoretest",
      "preferencesjstest/hap:preferences_js_test",
      "relationalStoretest:relationalStoretest",
    ]
  } else {
    deps = [
      "kvStorejstest/hap:distributeddatamgrfunctest_hap",
      "relationalStorejstest/hap:appdatamgrfunctest_hap",
      "searchtest/hap:searchfunctest_hap",
    ]
  }
}

group("pasteboard") {
  testonly = true
  deps = [ "Pasteboardjsapitest:ActsPasteBoardETSApiTest" ]
}
