# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos_var.gni")
group("graphic") {
  testonly = true
  if (is_standard_system) {
    deps = [
      "effectKit:EffectKitTest",
      "graphicColorSpace:ActsColorSpaceManagerTest",
      "graphicDrawing:ActsGraphicDrawingTest",
      "graphicEGL:ActsGraphicEglTest",
      "graphicGLES3:ActsGraphicGles3Test",
      "graphicGlesExtension:ActsGraphicGlesExtensionTest",
      "graphicnapidrawingtest:ActsGraphicNapiDrawingTest",
      "graphicnapitest:ActsGraphicNapiTest",
      "graphicvulkannapitest:ActsGraphicVulkanTest",
      "nativebuffer:ActsNativeBufferTest",
      "nativedrawing:ActsNativeDrawingTest",
      "nativeimage:ActsNativeImageTest",
      "nativevsync:ActsNativeVsyncTest",
      "webGL:webGL_hap_test",
      "windowStage:ActsWindowStageTest",
      "windowstandard:window_hap_test",
    ]
    if (!(product_name == "ohcore")) {
      deps += [
        "vkgl:cpvkgl",
        #"vulkan:cpvktest",
        #"vktest:vulkanTest",
      ]
    }
  } else {
    deps = [
      "appaccount:appaccount_hap",
      "osaccount:osaccount_hap",
    ]
  }
}
