# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos_var.gni")
group("graphic") {
  testonly = true
  if (is_standard_system) {
    deps = [
      "LandscapeWindow:LandscapeWindow_Test",
      "acts_animator:ActsAnimatorTest",
      "acts_display:ActsDisplayTest",
      "acts_drawing_native:ActsDrawingNativeTest",
      "acts_graphicXTSDrawing:ActsDrawingTsTest",
      "acts_pipwindow:ActsPipWindowTest",
      "acts_windowCompatibilityTest:ActsWindowCompatibilityTest",
      "component3D:ActsComponent3DTest",
      "displayManager:ActsDisplayManagerTest",
      "displayNdk:ActsDisplayNdkTest",
      "displayNdkApi14:ActsDisplayNdkApi14Test",
      "effectKit:ActsEffectKitTest",
      "graphic3D:ActsGraphic3DTest",
      "graphicColorSpace:ActsColorSpaceManagerTest",
      "graphicDisplaySync:ActsGraphicDisplaySyncTest",
      "graphicDrawingFont:ActsGraphicDrawingFontTest",
      "graphicEGL:ActsGraphicEglTest",
      "graphicGLES3:ActsGraphicGles3Test",
      "graphicGLES3v2:ActsGraphicGles3v2Test",
      "graphicGlesExtension:ActsGraphicGlesExtensionTest",
      "graphicHdr:ActsGraphicHdrTest",
      "graphicImage:ActsGraphicImageTest",
      "graphicText:ActsGraphicTextTest",
      "graphicUiEffect:ActsGraphicUiEffectTest",
      "graphicnapidrawingtest:ActsGraphicNapiDrawingTest",
      "graphicvulkannapitest:ActsGraphicVulkanTest",
      "imageNdk:image_ndk_hap",
      "nativeColorSpaceNdk:ActsNativeColorSpaceTest",
      "nativeDisplaySoloistNdk:ActsNativeDisplaySoloistTest",
      "nativeEffectNdk:ActsNativeEffectTest",
      "nativeFontNdk:ActsNativeFontTest",
      "nativebuffer:ActsNativeBufferTest",
      "nativedrawing:ActsNativeDrawingTest",
      "nativeimage:ActsNativeImageTest",
      "nativevsync:ActsNativeVsyncTest",
      "nativewindow:ActsNativeWindowTest",
      "webGL:webGL_hap_test",
      "windowNdk:ActsWindowNdkTest",
      "windowPermission:ActsWindowPermissionTest",
      "windowStage:ActsWindowStageTest",
      "windowStageTwo:ActsWindowStageTwoTest",
      "windowstandard:window_hap_test",
    ]
    if (!(product_name == "ohcore")) {
      deps += [
        "vkgl:cpvkgl",
        "vktest:cpVulkan",
      ]
    }
  } else {
    deps = [
      "appaccount:appaccount_hap",
      "osaccount:osaccount_hap",
    ]
  }
}
